@@ -14,7 +14,7 @@ public class IngredientToIngredientCommandTest {
     public static final Recipe RECIPE = new Recipe();
     public static final BigDecimal AMOUNT = new BigDecimal("1");
     public static final String DESCRIPTION = "Cheeseburger";
-    public static final Long UOM_ID = new Long(2L);
+    public static final Long UOM_ID = new Long(Long.valueOf("2"));
     public static final Long ID_VALUE = new Long(1L);
 
 
